mysql-phpmyadmin/templates/phpmyadmin-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
  name: phpmyadmin
spec:
  rules:
    - host: http://cluster/phpmyadmin
      http:
        paths:
          - backend:
            serviceName: phpmyadmin-service
            servicePort: 8080
